fixed spacing of theme and search buttons

--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -80,7 +80,6 @@
 @media (min-width: 768px) {
 	.navbar .container {
 		padding-left: 2rem;
-		padding-right: 2rem;
 	}
 
 	.brand-logo {
